# TI2.3-individueel

./: CMakeLists.txt  README.md
components/i2c/: CMakeLists.txt  i2c_module.c  i2c_module.h
components/re/: CMakeLists.txt  re_module.c  re_module.h
main/: CMakeLists.txt  main.c
